manifests/media-management/radarr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radarr
  namespace: media-management
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: homelab
      namespace: envoy-gateway
      #sectionName: https
  hostnames:
    - radarr.newgamer.lan
  rules:
    - backendRefs:
        - name: radarr
          port: 7878
